--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -44,6 +44,23 @@
     "com.unity.modules.video": "1.0.0",
     "com.unity.modules.vr": "1.0.0",
     "com.unity.modules.wind": "1.0.0",
-    "com.unity.modules.xr": "1.0.0"
-  }
+    "com.unity.modules.xr": "1.0.0",
+    "com.dbrizov.naughtyattributes": "2.1.0",
+    "com.demigiant.dotween": "1.2.632",
+    "com.joaosantos.package-common-wrapper": "1.0.4",
+    "com.joaosantos.package-services": "1.0.4"
+  },
+  "scopedRegistries": [
+    {
+      "name": "package.openupm.com",
+      "url": "https://package.openupm.com",
+      "scopes": [
+        "com.dbrizov.naughtyattributes",
+        "com.demigiant.dotween",
+        "com.joaosantos.package-common-wrapper",
+        "com.joaosantos.package-services",
+        "com.openupm"
+      ]
+    }
+  ]
 }
