--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,5 +1,9 @@
 {
   "dependencies": {
+    "com.dbrizov.naughtyattributes": "2.1.0",
+    "com.demigiant.dotween": "1.2.632",
+    "com.joaosantos.package-common-wrapper": "1.0.5",
+    "com.joaosantos.package-services": "1.0.6",
     "com.unity.2d.animation": "5.0.6",
     "com.unity.2d.pixel-perfect": "4.0.1",
     "com.unity.2d.psdimporter": "4.1.0",
@@ -44,11 +48,7 @@
     "com.unity.modules.video": "1.0.0",
     "com.unity.modules.vr": "1.0.0",
     "com.unity.modules.wind": "1.0.0",
-    "com.unity.modules.xr": "1.0.0",
-    "com.dbrizov.naughtyattributes": "2.1.0",
-    "com.demigiant.dotween": "1.2.632",
-    "com.joaosantos.package-common-wrapper": "1.0.4",
-    "com.joaosantos.package-services": "1.0.4"
+    "com.unity.modules.xr": "1.0.0"
   },
   "scopedRegistries": [
     {
