Adding Unity version target

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,6 +25,7 @@ jobs:
         env:
           UNITY_LICENSE: ${{ secrets.UNITY_LICENSE }}
         with:
+          unityVersion: 2020.3.15f2
           targetPlatform: ${{ matrix.targetPlatform }}
           androidAppBundle: true
           androidKeystoreName:  ${{ secrets.ANDROID_KEYALIAS_NAME }}
