--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -49,7 +49,8 @@
     "com.unity.modules.video": "1.0.0",
     "com.unity.modules.vr": "1.0.0",
     "com.unity.modules.wind": "1.0.0",
-    "com.unity.modules.xr": "1.0.0"
+    "com.unity.modules.xr": "1.0.0",
+    "com.joaosantos.package-custom-variables": "0.0.1"
   },
   "scopedRegistries": [
     {
@@ -59,6 +60,7 @@
         "com.dbrizov.naughtyattributes",
         "com.demigiant.dotween",
         "com.joaosantos.package-common-wrapper",
+        "com.joaosantos.package-custom-variables",
         "com.joaosantos.package-services",
         "com.openupm"
       ]
