--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,9 +1,10 @@
 {
   "dependencies": {
-    "com.dbrizov.naughtyattributes": "2.1.1",
+    "com.dbrizov.naughtyattributes": "2.1.4",
     "com.demigiant.dotween": "1.2.632",
-    "com.joaosantos.package-common-wrapper": "2.2.0",
-    "com.joaosantos.package-services": "2.4.0",
+    "com.joaosantos.package-common-wrapper": "2.2.1",
+    "com.joaosantos.package-custom-variables": "0.0.1",
+    "com.joaosantos.package-services": "2.4.1",
     "com.unity.2d.animation": "5.0.6",
     "com.unity.2d.pixel-perfect": "4.0.1",
     "com.unity.2d.psdimporter": "4.1.0",
@@ -49,8 +50,7 @@
     "com.unity.modules.video": "1.0.0",
     "com.unity.modules.vr": "1.0.0",
     "com.unity.modules.wind": "1.0.0",
-    "com.unity.modules.xr": "1.0.0",
-    "com.joaosantos.package-custom-variables": "0.0.1"
+    "com.unity.modules.xr": "1.0.0"
   },
   "scopedRegistries": [
     {
