(imp): usign correct dotween reference (removing old openupm reference). Assing to the Assemby reference

--- a/Assets/Project/Code/Scripts/AsteroidsAssembly.asmdef
+++ b/Assets/Project/Code/Scripts/AsteroidsAssembly.asmdef
@@ -9,7 +9,8 @@
         "GUID:453bddd653b4eae49b1fb1fe24c07cb5",
         "GUID:6055be8ebefd69e48b49212b09b47b2f",
         "GUID:ff6de30450f3748908ff580f6ec64d9a",
-        "GUID:051d13a5383795a41b5b7e835d2eabbc"
+        "GUID:051d13a5383795a41b5b7e835d2eabbc",
+        "GUID:94aebf3e714add341ba6042575042995"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
